# Projet_PRIM

./: .gitignore  README.md  graph  result
lacaze_lespagnol/: CMakeLists.txt  main.cpp  makefile
lacaze_lespagnol/Algo_PRIM/: ArbreRecouvr.cpp  ArbreRecouvr.h  PrimL.cpp  PrimL.h  PrimM.cpp  PrimM.h  Sommet.cpp  Sommet.h
